# Ngrams-Sigmod17

./: .gitignore  CMakeLists.txt  README.txt  big_file.wrong  changes.txt  clean.sh  comments.txt  file.init  file.query  h  main.cpp  makefile.old  run_checks.sh  runtests  script.sh  tags  tests.sh  tests_no_topk.txt  tests_topk.txt
debug/: log.txt
include/: array.h  binary_search.hpp  bit_vector.hpp  bloom_filter.hpp  cmd_parser.h  cmd_parser.hpp  constants.hpp  date_time.h  file_reader.h  hash_table.h  hash_table.hpp  helpers.h  helpers.hpp  linear_hash.hpp  logger.h  logger.hpp  minHeap.hpp  mqueue.hpp  mstack.hpp  mstring.h  mvector.h  mvector.hpp  pair.hpp  parser.h  parser.hpp  root_node.hpp  task.hpp  thread_pool.hpp  trie.h  trie.hpp  trie_node.h  trie_node.hpp  trie_nodes.hpp  work_queue.hpp  worker.hpp
input/: static.init  test.init  test.work
input/custom/: file.query
input/small/: small.result
input/test/: test.result
ngrams-testing/: .thread-pool-testing.cpp.swp  basic_tests.cpp  bit-vector-testing.cpp  bloom-filter-testing.cpp  cmd-parser-testing.cpp  is_prime.hpp  linear-hash-testing.cpp  minHeap-testing.cpp  parser-testing.cpp  queue-testing.cpp  stack-testing.cpp  static-insert--testing.cpp  thread-pool-testing.cpp  thread-testing.cpp  trie-compress-testing.cpp  trie-delete-testing.cpp  trie-insert-testing.cpp  trie-node-testing.cpp  trie-search-testing.cpp  trie-testing.cpp  trie-testing.cpp~asteris-testing  vector-testing.cpp
ngrams-testing/input/: large.input  medium.input  output-d-large.proper  output-large.proper  static_init.input
ngrams-testing/output/: output-d-medium.test  output-medium.test  output-s-medium.test
ngrams-testing/test-input/: output-d-medium.proper
ngrams-testing/test-input/bloom-filter-input/: extra-large.bloom.wrong  formatter.py  large.bloom.correct  large.bloom.wrong  medium.bloom.correct  medium.bloom.wrong  small.bloom.correct  small.bloom.wrong
ngrams-testing/test-input/linear-hash-input/: big_file-no_dups.correct  big_file.correct  big_file.wrong
source/: .main.cpp.swp  .trie.cpp.swp  array.cpp  bit_vector.cpp  bloom_filter.cpp  file_reader.cpp  linear_hash.cpp  logger.cpp  main.cpp  mstring.cpp  parser.cpp  root_node.cpp  task.cpp  test_main.cpp  thread_pool.cpp  trie.cpp  trie_node.cpp  trie_nodes.cpp  work_queue.cpp  worker.cpp
